syntax = "proto3";

enum FolderNotification {
    Unknown = 0;
    UserCreateWorkspace = 10;
    UserDeleteWorkspace = 11;
    WorkspaceUpdated = 12;
    WorkspaceListUpdated = 13;
    WorkspaceAppsChanged = 14;
    AppUpdated = 21;
    AppViewsChanged = 24;
    ViewUpdated = 31;
    ViewDeleted = 32;
    ViewRestored = 33;
    UserUnauthorized = 100;
    TrashUpdated = 1000;
}
